inicio de sesion

--- a/app/templates/memes/index.html
+++ b/app/templates/memes/index.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
+
 {% block title %} User page {% endblock %}
+
 {% block body %}
 <!-- Begin page content -->
 <main class="flex-shrink-0">
   <div class="container">
-    <h1>Aplicación Web con Flask y Bootstrap</h1>
-  
+    <h1>Memes</h1>
+    <img src="https://static.eldiario.es/clip/cfad379c-f641-4a31-b0e9-0e35e2190146_twitter-aspect-ratio_default_0.jpg" alt="">
   </div>
 </main>
-{% endblock %}    
+{% endblock %} 
