--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,55 +1,41 @@
-from app.auth import bp
-from flask import render_template, request, flash, redirect, url_for
-from flask_login import login_user
-from app.models.user import User
-from app.extensions import db
+{% extends 'base.html' %}
 
-@bp.route('/')
-def index():
-    users = User.query.all()
-    return render_template('auth/index.html', users = users)
+{% block title %} User page {% endblock %}
 
-@bp.route('/register', methods =('GET', 'POST'))
-def register():
-    if request.method == 'POST':
-        username = request.form['username']
-        email = request.form['email']
-        password= request.form['password']
-        password_confirm = request.form['password_confirm']
+{% block body %}
+<div class="row">
+    <div class="col-md-3 offset-md-4">
+        <h1>Regístrate</h1>
 
-        if not username:
-            flash('El nombre de usuario es obligario')
-        elif not email:
-            flash('El correo es obligario')
-        elif not password == password_confirm:
-            flash('La contraseña no coincide')    
-        else:
-            user = User(username = username, email = email, password_hash = password)
-            db.session.add(user)
-            db.session.commit()
-            return redirect(url_for('auth.index'))
+        <form class="mb-3" method="post">
+            <div class="mb-3">
+                <label for="username" class="form-label">Nombre de Usuario</label>
+                <input type="text" name="username" id="username" placeholder="Tu Nombre de Usuario "
+                    value="{{ request.form['username'] }}" class="form-control">
+            </div>
 
-    return render_template('auth/register.html')
+            <div class="mb-3">
+                <label for="email" class="form-label"> Ingresa tu correo</label>
+                <input type="text" name="email" id="email" placeholder="Escribe tu email"
+                    value="{{ request.form['email'] }}" class="form-control">
+            </div>
 
+            <div class="mb-3">
+                <label for="password" class="form-label">Escribe tu contraseña</label>
+                <input type="password" name="password" id="password" placeholder="Tu contraseña"
+                    value="{{ request.form['password'] }}" class="form-control">
+            </div>
 
-@bp.route('/login', methods =('GET', 'POST'))
-def login():
-    if request.method == 'POST':
-        email = request.form['email']
-        password= request.form['password']
-        remember = request.form["remember_me"]
+            <div class="mb-3">
+                <label for="password_confirm" class="form-label">Confirma tu contraseña</label>
+                <input type="password" name="password_confirm" id="password_confirm" placeholder="Confirma contraseña"
+                    value="{{ request.form['password_confirm'] }}" class="form-control">
+            </div>
 
-        if not password:
-            flash('La contraseña del usuario es obligario')
-        elif not email:
-            flash('El correo es obligario')   
-        else:
-            user = User.query.filter_by(email=email).first()
-            if user and user.verify_password(password):
-                login_user(user, remember)
-                next = request.args.get('next')
-                if next is None:
-                    next = url_for('main.index')
-                return redirect(next)
-            flash('usuario o password incorrecto')
-    return render_template('auth/login.html')
+            <button type="submit" class="btn btn-primary mt-3">Enviar</button>
+        </form>
+        ¿Ya tienes usuario? Inicia sesión <a href="{{ url_for('auth.login') }}">aquí</a>
+    </div>
+</div>
+
+{% endblock %}
