--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,30 +1,29 @@
-{% extends 'base.html' %}
-{% block title %} User page {% endblock %}
+{% extends "base.html" %}
+
+{% block title %}Flasky - Login{% endblock %}
+
 {% block body %}
-<h1 class="text-center">Registrate</h1>
-<form method="post">
-       <label for="username" class="form-label">Nombre de Usuario</label>
-       <input type="text" name="username" id="username"
-              placeholder="Nombre de Usuario"
-              value="{{ request.form['username'] }}" class="form-control">
-       
-       <label for="email" class="form-label">Ingresa tu correo</label>
-       <input type="text" name="email" id="email"
-              placeholder="Ingresa tu Correo"
-              value="{{ request.form['email'] }}" class="form-control">
-      
-       <label for="password" class="form-label">Escribe tu Contraseña</label>
-       <input type="password" name="password" id="password"
-              placeholder="Tu Contraseña"
-              value="{{ request.form['password'] }}" class="form-control">
-
-        <label for="password_confirm" class="form-label">Confirma tu Contraseña</label>
-        <input type="password" name="password_confirm" id="password_confirm"
-                placeholder="Confirma tu Contraseña"
-                value="{{ request.form['password_confirm'] }}" class="form-control">
-
-        <button type="submit" class="btn btn-primary mt-3">Enviar formulario</button>
-</form>
+<div class="row">
+    <div class="col-md-3 offset-md-4">
+        <h1 class="text-center">Login</h1>
+        <form class="mb-3" method="post">
+            <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" name="email" id="email" placeholder="Correo de usuario" value="{{ request.form['email'] }}" class="form-control" required>
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Contraseña</label>
+                <input type="password" name="password" id="password" placeholder="Contraseña" value="{{ request.form['picture'] }}" class="form-control" required>        
+            </div>
+            <div class="mb-3">
+                <input type="checkbox" name="remember_me" id="remember_me" value="{{ request.form['remember_me'] }}">
+                <label for="remember_me" class="form-check-label">Mantener sesión</label>
+            </div>
+            <button type="submit" class="btn btn-primary">Log In</button>
+        </form>
+        ¿No tienes usuario? Crea el tuyo <a href="{{ url_for('auth.register') }}">aquí</a>
+    </div>
+</div>
 {% endblock %}
 
 
